fix: container overflow -> Scroll not working

--- a/components/ConversationContainer/conversationcontainer.css
+++ b/components/ConversationContainer/conversationcontainer.css
@@ -1,3 +1,10 @@
 .conversationcontainer-principal {
-  padding: 5px 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 12px;
+  overflow-y: scroll;
+  margin: 1px;
 }
